Add control delete and orphan view
